overflow-x fix

--- a/_sass/3-layouts/_about.sass
+++ b/_sass/3-layouts/_about.sass
@@ -1,13 +1,14 @@
 a.HomePage-cell.HomePage-Block1.hire.about
   h1
     margin-top: -20px
-    font-size: 5rem
+    font-size: 4.5rem
     @media (min-width: 950px)
       font-size: 8rem
   p
-    margin-top: -40px
     font-size: 1rem
+    margin-top: 1em
     @media (min-width: 950px)
+      margin-top: -40px
       font-size: 1.5rem
     color: white
 
@@ -26,6 +27,7 @@ a.HomePage-cell.HomePage-Block1.hire.about
     border: solid 3px white
 
 #about-content
+  overflow-x: hidden
   font-family: "VT323", monospace
   color: #9DB8D3
   font-size: .75em
